Closed Bug 82169 Opened 24 years ago Closed 24 years ago

Switching directory for autocomplete needs a restart

Categories

(MailNews Core :: LDAP Integration, defect, P3)

x86
Other
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.2

People

(Reporter: ji, Assigned: dmosedale)

References

Details

(Whiteboard: [PDT+] partial fix checked in; patch in 79792 has the rest)

Attachments

(1 file)

Build: 05/22 trunk build When switching to a different directory for autocomplete, to make the new directory effective for the autocomplete, you need to restart the browser. Steps to reproduce: 1. Set up two directories for addressing autocomplete. And use one of them first. 2. Bring up a mail compose window, enter a name in To: field. You can get a match list from the directory you are using. 3. Switch the directory to another one. 4. Bring up a mail compose window, enter a name in To: field, you still get the match list from the 1st directory you used. 5. Restart the browser and bring up a mail compose window, this time you can get a autocomplete list from the 2nd directory you switched to.
Blocks: 17880
Depends on: 76755, 79777
This involves tweaks inside nsLDAPAutoCompleteSession; taking.
Assignee: srilatha → dmose
Priority: -- → P3
Target Milestone: --- → mozilla0.9.2
No longer blocks: 81761
Depends on: 84577
No longer depends on: 76755, 79777
No longer blocks: 82814
Status: NEW → ASSIGNED
PDT+ per 6/12 mtg.
Whiteboard: [PDT+]
No longer blocks: 79792
Whiteboard: [PDT+] → [PDT+] fix should come for free with 79792 fix
Depends on: 79792
No longer depends on: 84577
Whiteboard: [PDT+] fix should come for free with 79792 fix → [PDT+] fix for 79792 will fix this also
After both the patch in this bug and the patch in bug 79792 have landed, this should be fixed.
Keywords: patch, review
Whiteboard: [PDT+] fix for 79792 will fix this also → [PDT+] have patch, need r=, sr=, a=
sr=hewitt
rs=darin
a= asa@mozilla.org for checkin to the trunk. (on behalf of drivers)
Blocks: 83989
Whiteboard: [PDT+] have patch, need r=, sr=, a= → [PDT+] partial fix checked in; patch in 79792 has the rest
Marking as resolved fixed as fix for 79792 is checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Verified with 2001062204 trunk builds on all platforms
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: