Partial fix for bug 82169 (switching LDAP autocomplete directory requires restart to take effect).  r=hewitt, rs=darin, a=asa